--- a/cartisan-management-ui/index.html
+++ b/cartisan-management-ui/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>cartisan-management-ui</title>
   </head>
-  <body>
+  <body class="hold-transition skin-blue sidebar-mini">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
